--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.3
+  dio: ^5.9.1
+  get_storage: ^2.1.1
+  google_fonts: ^8.0.2
 
 dev_dependencies:
   flutter_test:
