--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.1",
+    "recharts": "^3.7.0",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
